# lib/schemas/index.ts
@@ -11,5 +11,6 @@ export * from "./literature";
 export * from "./trial";
 export * from "./pgx";
 export * from "./reaction";
+export * from "./condition";
 export * from "./semantic";
 export * from "./webhook";
